@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -40,7 +40,7 @@ public class Bug4395196
         public static void main(String[] arg)
         {
                 int result = 0;
-                Locale loc = new Locale("ko","KR");
+                Locale loc = Locale.of("ko","KR");
                 Date now = new Date(108, Calendar.APRIL, 9);
 
                 DateFormat df =
